seaqt/QtMultimedia/gen_qaudiodeviceinfo.h

class QAudioDeviceInfo;
class QAudioFormat;
typedef struct QAudioDeviceInfo QAudioDeviceInfo;
typedef struct QAudioFormat QAudioFormat;
QAudioDeviceInfo* QAudioDeviceInfo_new();
QAudioDeviceInfo* QAudioDeviceInfo_new2(QAudioDeviceInfo* other);
void QAudioDeviceInfo_operatorAssign(QAudioDeviceInfo* self, QAudioDeviceInfo* other);
bool QAudioDeviceInfo_operatorEqual(const QAudioDeviceInfo* self, QAudioDeviceInfo* other);
bool QAudioDeviceInfo_operatorNotEqual(const QAudioDeviceInfo* self, QAudioDeviceInfo* other);
bool QAudioDeviceInfo_isNull(const QAudioDeviceInfo* self);
struct miqt_string QAudioDeviceInfo_deviceName(const QAudioDeviceInfo* self);
bool QAudioDeviceInfo_isFormatSupported(const QAudioDeviceInfo* self, QAudioFormat* format);
QAudioFormat* QAudioDeviceInfo_preferredFormat(const QAudioDeviceInfo* self);
QAudioFormat* QAudioDeviceInfo_nearestFormat(const QAudioDeviceInfo* self, QAudioFormat* format);
struct miqt_array /* of struct miqt_string */  QAudioDeviceInfo_supportedCodecs(const QAudioDeviceInfo* self);
struct miqt_array /* of int */  QAudioDeviceInfo_supportedSampleRates(const QAudioDeviceInfo* self);
struct miqt_array /* of int */  QAudioDeviceInfo_supportedChannelCounts(const QAudioDeviceInfo* self);
struct miqt_array /* of int */  QAudioDeviceInfo_supportedSampleSizes(const QAudioDeviceInfo* self);
struct miqt_array /* of int */  QAudioDeviceInfo_supportedByteOrders(const QAudioDeviceInfo* self);
struct miqt_array /* of int */  QAudioDeviceInfo_supportedSampleTypes(const QAudioDeviceInfo* self);
struct miqt_string QAudioDeviceInfo_realm(const QAudioDeviceInfo* self);
QAudioDeviceInfo* QAudioDeviceInfo_defaultInputDevice();
QAudioDeviceInfo* QAudioDeviceInfo_defaultOutputDevice();
struct miqt_array /* of QAudioDeviceInfo* */  QAudioDeviceInfo_availableDevices(int mode);
void QAudioDeviceInfo_delete(QAudioDeviceInfo* self);